refactor for kindling

--- a/package.json
+++ b/package.json
@@ -1,38 +1,26 @@
 {
-  "name": "project",
+  "name": "kindling-browserify",
   "version": "0.1.0",
-  "description": "TODO",
+  "description": "a kindling generator for browserify",
   "main": "index.js",
   "scripts": {
-    "develop": "(export NODE_ENV=development; beefy index.js:bundle.js 5000 -- -t lessify)",
-    "test": "(export NODE_ENV=test; testling)",
-    "start": "(export NODE_ENV=production; browserify index.js -o bundle.js -t lessify -g uglifyify)",
-    "deploy": "(export NODE_ENV=production; npm start && ./bin/deploy)"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/ahdinosaur/init.beefy.git"
+    "url": "git://github.com/ahdinosaur/kindling-browserify.git"
   },
   "keywords": [
-    "init",
-    "seed",
-    "start",
+    "kindling",
+    "generator",
     "starter",
-    "scaffold",
+    "seed",
     "scaffolding"
   ],
   "author": "ahdinosaur",
-  "license": "AGPLv3",
+  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ahdinosaur/init.beefy/issues"
+    "url": "https://github.com/ahdinosaur/kindling-browserify/issues"
   },
-  "homepage": "https://github.com/ahdinosaur/init.beefy",
-  "dependencies": {
-    "browserify": "^3.41.0",
-    "lessify": "git://github.com/ahdinosaur/lessify",
-    "uglifyify": "^2.1.1"
-  },
-  "devDependencies": {
-    "beefy": "^1.1.0"
-  }
+  "homepage": "https://github.com/ahdinosaur/kindling-browserify"
 }
