--- a/template/package.json
+++ b/template/package.json
@@ -4,10 +4,17 @@
   "description": "__description__",
   "main": "index.js",
   "scripts": {
-    "develop": "(export NODE_ENV=development; beefy index.js:bundle.js 5000 -- -t cssify)",
+    "start": "beefy index.js:bundle.js 5000",
+    "build": "browserify index.js -o bundle.js -g uglifyify",
+    "deploy": "bin/deploy",
+    "dev": "(export NODE_ENV=development; npm start)",
     "test": "(export NODE_ENV=test; testling)",
-    "start": "(export NODE_ENV=production; browserify index.js -o bundle.js -t cssify -g uglifyify)",
-    "deploy": "(export NODE_ENV=production; npm start && ./bin/deploy)"
+    "prod": "(export NODE_ENV=production; npm run build && npm run deploy)"
+  },
+  "browserify": {
+    "transform": [
+      "cssify"
+    ]
   },
   "repository": {
     "type": "git",
@@ -21,11 +28,12 @@
   },
   "homepage": "https://github.com/__user__/__project__",
   "dependencies": {
-    "browserify": "^3.41.0",
-    "cssify": "^0.5.0",
-    "uglifyify": "^2.1.1"
+    "browserify": "^6.0.3",
+    "cssify": "^0.6.0",
+    "uglifyify": "^2.5.0"
   },
   "devDependencies": {
-    "beefy": "^1.1.0"
+    "beefy": "^2.1.1",
+    "watchify": "^2.0.0"
   }
 }
